--- a/PW_app_webview_true_url_both.json
+++ b/PW_app_webview_true_url_both.json
@@ -1,6 +1,6 @@
 {
   "url": "http://spidyiq.vercel.app",
-  "selectionway_url": "none",
+  "selectionway_url": "https://studyiqfree.vercel.app",
   "educationbaba_url": "none",
   "offers_url": "https://example.com/offers",
   "profile_url": "https://example.com/profile",
